test/langtools/tools/javac/reflect/TestNoCodeReflectionInInnerClasses.out
TestNoCodeReflectionInInnerClasses.java:12:21: compiler.warn.reflectable.method.inner.class: TestNoCodeReflectionInInnerClasses.Inner
TestNoCodeReflectionInInnerClasses.java:15:46: compiler.warn.reflectable.lambda.inner.class: TestNoCodeReflectionInInnerClasses.Inner
TestNoCodeReflectionInInnerClasses.java:19:46: compiler.warn.reflectable.mref.inner.class: TestNoCodeReflectionInInnerClasses.Inner
- compiler.err.warnings.and.werror
1 error
3 warnings
